# my_pkg

./: README.md  pyproject.toml  setup.cfg  tox.ini
src/my_pkg/: __init__.py  character.py  main_character.py
tests/: test_init_char.py
