[metadata]
name = my_pkg
version = 0.1
url = https://github.com/satamame/my_pkg
author = satamame
author-email = satamame@gmail.com
license = MIT
license_file = LICENSE
description = my_pkg: A sample package
long_description = file: README.md
keywords = sample, package, development
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
package_dir =
    =src
packages = my_pkg
install_requires =
    numpy==1.19.3
python_requires = ~=3.8
